messed around with buttons

--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@
 
 #scissors {
   margin: 15px;
-  background-image: url("http://www.iconarchive.com/download/i90819/icons8/windows-8/Hair-Barbers-Scissors.ico");
+  background-image: url("https://maxcdn.icons8.com/Share/icon/Healthcare//scissors1600.png");
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
